@@ -4,6 +4,7 @@ require File.dirname(__FILE__) + '/../../spec_helper'
 
 describe I18n, "Russian Date/Time localization" do
   before(:all) do
+    Russian.init_i18n
     @date = Date.parse("1985-12-01")
     @time = Time.local(1985, 12, 01, 16, 05)
   end
@@ -43,6 +44,9 @@ describe I18n, "Russian Date/Time localization" do
     it "should use month names" do
       l(@date, :format => "%d %B").should == "01 декабря"
       l(@date, :format => "%e %B %Y").should == " 1 декабря 1985"
+      l(@date, :format => "<b>%d</b> %B").should == "<b>01</b> декабря"
+      l(@date, :format => "<strong>%e</strong> %B %Y").should == "<strong> 1</strong> декабря 1985"
+      l(@date, :format => "А было тогда %eе число %B %Y").should == "А было тогда  1е число декабря 1985"
     end
     
     it "should use standalone month names" do
@@ -54,6 +58,8 @@ describe I18n, "Russian Date/Time localization" do
       @date = Date.parse("1985-03-01")
       l(@date, :format => "%d %b").should == "01 марта"
       l(@date, :format => "%e %b %Y").should == " 1 марта 1985"
+      l(@date, :format => "<b>%d</b> %b").should == "<b>01</b> марта"
+      l(@date, :format => "<strong>%e</strong> %b %Y").should == "<strong> 1</strong> марта 1985"
     end
     
     it "should use standalone abbreviated month names" do
